feat(swagger) - add proejct endpoints
